# project-haui

./: .gitignore  README.md  convert.py  main.py  pyproject.toml  requirements.txt  test.py
GUI/: .gitignore  README.md  main.py  requirements.txt
GUI/assets/: __init__.py
GUI/controls/: button.py
GUI/models/: audio.py
assets/: __init__.py  database.json  settings.json
base/: __init__.py  data.py  dataclass.py  design_pattern.py  mainapp.py  models.py  system.py  view.py
base_model/: base.py
controls/: file_controls.py  home_controls.py  settings_controls.py
models/: __init__.py  models.py  processing.py  system.py
models/layouts/: fileupload_view.py  home_view.py  record_view.py
models/log/: base_log.py
models/main_model/: record_audio.py
models/noisereduce/: __init__.py  generate_noise.py  noisereduce.py
models/process/: remove_silent.py
models/record/: read_file.py  record_audio.py
models/renoise_audio/: __init__.py  noisereduce.py
models/run_threads/: main.py
models/speech_recognition/: main.py
models/threads/: __init__.py
models/whisper/: __init__.py  __main__.py  audio.py  decoding.py  model.py  timing.py  transcribe.py
templates/: base_template.py  current_audio.py  fileupload_template.py  home_template.py  mic_template.py
templates/component/: audio_component_template.py  conponent_home_template.py  function.py  listen_component.py  new_record_template.py
templates/controls/: file.py  home.py  playlist.py  record.py
templates/view/: file.py  home.py  playlist.py  record.py  (+1 more)
view/: __init__.py
views/: controller.py
(+20 files in other folders)
